Adding sonar-project.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=QC:QC_antlr-3.4
-sonar.projectName=QC_antlr-3.4
-sonar.projectVersion=3.4
+sonar.projectKey=QC:QC_axion-1.0-M2
+sonar.projectName=QC_axion-1.0-M2
+sonar.projectVersion=1.0
  
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set. 
@@ -11,4 +11,3 @@ sonar.java.binaries=./bin
 sonar.java.libraries=./lib
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
-
